matweb/kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matweb
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - matweb.djnd.si
      secretName: matweb-tls
  rules:
    - host: matweb.djnd.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: matweb
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matwebapi
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - matwebapi.djnd.si
      secretName: matwebapi-tls
  rules:
    - host: matwebapi.djnd.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: matwebapi
                port:
                  number: 80
